--- a/giveNtake_frontend/package.json
+++ b/giveNtake_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Airline_Reservation_Carrie_Sophie",
+  "name": "giveNtake",
   "version": "0.1.0",
   "private": true,
   "scripts": {
