--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
